<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyCooking</string>
    <string name="Greeting">Welcome!</string>
    <string name="menu_settings">Settings</string>
    <string name="email">Enter your email</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Ingradints/dish name</string>
    <string name="record_recipe">Recorded Recipes</string>
    <string name="my_download">Downloaded Recipes</string>
    <string name="my_upload">Uploaded Recipes</string>
    <string name="local_recipe">All Local Recipes</string>
    <string name="back_to_main">BACK TO MAIN PAGE</string>
    <string name="Setup">Custom Search"</string>
    <string name="MyIngredient">MyIngredient</string>
    <string name="CreatRecipe">CreateRecipe</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="recipe_share_with_me">Recipe Share to me</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_itisatry">Itisatry</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="modify">Modify</string>
    <string name="Upload">Upload</string>
    <string name="steps">Steps:</string>
    <string name="TakePhoto">TakePhoto</string>
    <string name="Newsearch">New Search</string>
    <string name="continue_to_recipe">Continue to Edit Recipe</string>
    <string name="accept">Accept</string>
    <string name="Ingredients:">Ingredients:</string>
    <string name="LoclRecipes">LoclRecipes</string>
    <string name="InternetData">InternetData</string>
    <string name="AsIngredient">AsIngredient</string>
    <string name="AsDishName">AsDishName</string>
    <string name="Search_By_My_Ingredient">Search By My Ingredient</string>
    <string name="generate">generate</string>
    <string name="Confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="query_ingredients">Query Your Ingreidents</string>

</resources>