<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/add"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="6dp"
        android:text="@string/Add" />

    <Button
        android:id="@+id/delete"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_x="216dp"
        android:layout_y="6dp"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/save"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="6dp"
        android:text="@string/Save" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="64dp"
        android:text="@string/Ingredient:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/amount_Text"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_x="121dp"
        android:layout_y="100dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_x="2dp"
        android:layout_y="141dp" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="43dp"
        android:layout_y="109dp"
        android:text="Amount:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ingredient_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_x="120dp"
        android:layout_y="53dp"
        android:ems="10"
        android:inputType="text" />

</AbsoluteLayout>